[project]
name = "bybit_p2p_async"
version = "1.0.0"
authors = [
  { name="Tokenator Exchange", email="contact@tokenator.ru" },
  { name="Kirill Suvorov", email="herbalsomml@gmail.com" }
]
description = "An asynchronous fork of the official ByBit P2P API integration library written in Python."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "aiofiles",
  "aiohttp",
  "pycryptodome"
]

[project.urls]
Homepage = "https://github.com/TokenatorObmenator/bybit_p2p_async"
Issues = "https://github.com/TokenatorObmenator/bybit_p2p_async/issues"